# osgop-parser

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/v1/endpoints/: parser.py
app/core/: config.py  logging.py
app/models/: contract.py
app/services/: car_api_client.py  element_api_client_async.py  exporter.py  file_saver.py  osgop_element_uploader_async.py  parser.py  parser_factory.py  parser_old.py  pdf_reader.py  pdf_splitter.py  plate_normalizer.py  storage.py
app/utils/: regex.py
tests/: conftest.py  test_parser.py  test_parser_dates.py  test_parser_header.py  test_parser_inn.py  test_parser_plate.py
