[project]
name = "osgop-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs>=14.5.0",
    "fastapi[standard]>=0.123.0",
    "fastexcel>=0.18.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pdfminer-six>=20251107",
    "polars>=1.35.2",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
]
